--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive", "env"] }
+rumqttc = { version = "0.24.0", features = ["url"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
+url = "2.5.0"
 v4l = "0.14.0"
